<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/maincolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="413dp"
            app:srcCompat="@drawable/forlogin" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="40sp"
            android:layout_marginRight="40sp"
            android:background="@drawable/fields_for_login_page"
            android:padding="10sp"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="40sp"
            android:background="@drawable/fields_for_login_page"
            android:padding="10sp"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="45sp"
                android:layout_marginStart="15sp"
                android:layout_marginBottom="10sp"
                android:layout_gravity="bottom"
                android:background="@drawable/button_on_login_page"
                android:fontFamily="monospace"
                android:text="@string/enter"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="15sp"
                android:layout_marginBottom="10sp"
                android:layout_gravity="bottom"
                android:background="@drawable/button_on_login_page"
                android:fontFamily="monospace"
                android:text="@string/register"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>