<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/new_icon_back" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back_to_home"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/new_icon_back_to_main_screen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="26sp"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@drawable/other_button"
                android:text="@string/sleepProfile"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fellAsleepView"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:background="@drawable/for_button_send"
                android:textColor="@color/textColor3"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/wokeUpView"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAllCaps="false"
                android:background="@drawable/for_button_send"
                android:textColor="@color/textColor3"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/resultSleep"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textAllCaps="false"
                android:background="@drawable/for_button_send"
                android:textColor="@color/textColor3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_timeSinceLastSleep"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/for_button_send"
                android:textColor="@color/textColor3"/>

            <TextView
                android:id="@+id/countField"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/for_button_send"
                android:textColor="@color/textColor3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="60sp"
                android:textColor="@color/textColor3"
                android:id="@+id/timer"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fellAsleep"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/fellAsleep"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:textColor="@color/textColor3"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:background="@drawable/button_on_login_page"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/wokeUp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/wokeUp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/textColor3"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:background="@drawable/button_on_login_page"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pause"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Пауза"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:textColor="@color/textColor3"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:background="@drawable/button_on_login_page"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cont"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Продолжить"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/textColor3"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:background="@drawable/button_on_login_page"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:textColor="@color/textColor3"
                android:text="@string/addNewSleep"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:background="@drawable/button_on_login_page"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/statistics"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/sleepStatistics"
                android:textColor="@color/textColor3"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:background="@drawable/button_on_login_page" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>